SCRUM-5650 do not include alleleGeneAssociations in allel_summary doc… (#2330)
* SCRUM-5650 do not include alleleGeneAssociations in allel_summary docs when the association is marked as internal=true

* refactor

* refactor